--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,3 +2,4 @@ cmake_minimum_required(VERSION 3.26)
 project(Masharif)
 set(CMAKE_CXX_STANDARD 23)
 add_subdirectory(masharifcore)
+add_subdirectory(example)
