- Enhance the algorithm and validate it with yoga testcases

--- a/masharifcore/CMakeLists.txt
+++ b/masharifcore/CMakeLists.txt
@@ -40,4 +40,4 @@ if (CMAKE_BUILD_TYPE STREQUAL "Release")
 endif ()
 
 
-target_include_directories(masharifcore PRIVATE ${MASHARIF_ROOT})
+target_include_directories(masharifcore PUBLIC ${MASHARIF_ROOT})
