Some minimal cleaning

--- a/masharifcore/CMakeLists.txt
+++ b/masharifcore/CMakeLists.txt
@@ -9,7 +9,10 @@ file(GLOB SOURCES CONFIGURE_DEPENDS
         ${CMAKE_CURRENT_SOURCE_DIR}/**/*.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/**/*.h)
 
+
 add_library(masharifcore STATIC ${SOURCES})
+add_library(masharif::masharifcore ALIAS masharifcore)
+
 check_ipo_supported(RESULT result)
 if (result)
     set_target_properties(masharifcore PROPERTIES
@@ -27,17 +30,39 @@ if (CMAKE_BUILD_TYPE STREQUAL "Release")
     if (MSVC)
         add_compile_options(
                 /O2
-                /arch:AVX2
                 /Ob2
         )
     elseif (CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
         add_compile_options(
                 -O2
-                -march=native
                 -finline-functions
         )
     endif ()
 endif ()
 
 
-target_include_directories(masharifcore PUBLIC ${MASHARIF_ROOT})
+target_include_directories(masharifcore PUBLIC 
+    $<BUILD_INTERFACE:${MASHARIF_ROOT}>
+    $<INSTALL_INTERFACE:include>
+)
+
+include(GNUInstallDirs)
+
+install(TARGETS masharifcore
+    EXPORT masharifTargets
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+    INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+)
+
+install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/
+    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/masharifcore
+    FILES_MATCHING PATTERN "*.h"
+)
+
+install(EXPORT masharifTargets
+    FILE masharifTargets.cmake
+    NAMESPACE masharif::
+    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/masharif
+)
